[gd_scene load_steps=4 format=3 uid="uid://cjd7umocrh6m7"]

[ext_resource type="Script" uid="uid://ddsv1dyk6d2qo" path="res://scenes/weapon_slot.gd" id="1_elaqd"]
[ext_resource type="PackedScene" uid="uid://bg2ujckow4hqh" path="res://scenes/test_gym/test-models/weapons/blasterC.glb" id="2_yssnf"]
[ext_resource type="Script" uid="uid://d1lbkm33abonk" path="res://scripts/FSM/state_machine.gd" id="3_ris4c"]

[node name="WeaponSlot" type="Node3D"]
script = ExtResource("1_elaqd")

[node name="ModelContainer" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="blasterC2" parent="ModelContainer" instance=ExtResource("2_yssnf")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.324, -0.3, -0.929)

[node name="blasterC" parent="ModelContainer/blasterC2" index="0"]
layers = 2

[node name="WeaponState" type="Node" parent="." node_paths=PackedStringArray("state_target")]
unique_name_in_owner = true
script = ExtResource("3_ris4c")
state_target = NodePath("..")

[node name="ShotCast" type="RayCast3D" parent="."]
unique_name_in_owner = true
target_position = Vector3(0, 0, -1.5)
collision_mask = 9
hit_from_inside = true
collide_with_areas = true

[editable path="ModelContainer/blasterC2"]
